--- a/manifests/demo.yml
+++ b/manifests/demo.yml
@@ -1,62 +1,49 @@
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: spinnaker-demo-config
-  namespace: default
-data:
-  NEW_FEATURE: "true"
-
----
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: spinnaker-demo
+  name: maven-demo
   namespace: default
   labels:
-    source: demo
+    source: maven
     stack: frontend
-    app: spinnaker
+    app: tomcat
 spec:
   replicas: 3
   selector:
     matchLabels:
-      source: demo
-      app: spinnaker
+      source: maven
+      app: tomcat
   template:
     metadata:
       labels:
-        source: demo
-        app: spinnaker
+        source: maven
+        app: tomcat
     spec:
       containers:
-      - name: primary
-        image: index.docker.io/tusharstudy2020/spinnakerimages
+      - name: maven-container
+        image: index.docker.io/tusharstudy2020/webappimages
         imagePullPolicy: Always
         ports:
-        - containerPort: 8000
+        - containerPort: 8080
         readinessProbe:
           httpGet:
             path: /
-            port: 8000
-        envFrom:
-        - configMapRef:
-            name: spinnaker-demo-config
+            port: 8080
 
 ---
 
 kind: Service
 apiVersion: v1
 metadata:
-  name: spinnaker-demo
+  name: maven-demo
   namespace: default
 spec:
   selector:
-    source: demo
-    app: spinnaker
+    source: maven
+    app: tomacat
   type: NodePort
   ports:
   - protocol: TCP
-    port: 80
-    nodePort: 32413
-    targetPort: 8000
+    port: 90
+    nodePort: 32450
+    targetPort: 8080
