--- a/manifests/dev.yml
+++ b/manifests/dev.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: maven-demo
-  namespace: default
+  namespace: dev
   labels:
     source: maven
     stack: frontend
@@ -36,7 +36,7 @@ kind: Service
 apiVersion: v1
 metadata:
   name: maven-demo
-  namespace: default
+  namespace: dev
 spec:
   selector:
     source: maven
